# magma-demo

./: .clang-format  CMakeLists.txt  CMakePresets.json  Readme.md
cmake/Dependencies/: Magma.cmake  yaml-cpp.cmake
config/: MagmaDebugConfig.yaml
src/: main.cpp
